fix hover and wrapping

--- a/main.css
+++ b/main.css
@@ -25,33 +25,21 @@ body {
 }
 
 #controls {
-    position: absolute;
-    right: 20px;
-    bottom: 20px;
     opacity: 0;
-    color: white;
     z-index: 1;
-
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;
-    display: inline-block;
-    line-height: 1;
-    text-transform: none;
-    letter-spacing: normal;
-    word-wrap: normal;
+    position: absolute;
+    right: 36px;
+    bottom: 36px;
     white-space: nowrap;
-    direction: ltr;
-    /* Support for all WebKit browsers. */
+    color: white;
+    font-family: 'Material Icons';
+    font-size: 24px;
+    line-height: 1;
+    white-space: nowrap;
     -webkit-font-smoothing: antialiased;
-    /* Support for Safari and Chrome. */
     text-rendering: optimizeLegibility;
-    /* Support for Firefox. */
     -moz-osx-font-smoothing: grayscale;
-    /* Support for IE. */
     font-feature-settings: 'liga';
-    
     -o-transition: .5s;
     -ms-transition: .5s;
     -moz-transition: .5s;
@@ -63,4 +51,13 @@ body {
 #play,
 #fullscreen:hover {
     cursor: pointer;
+}
+
+#play {
+    position: absolute;
+    right: 2px;
+}
+
+#fullscreen {
+    position: absolute;
 }
